--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- Existing Favicon -->
+    <!-- <link rel="icon" href="%PUBLIC_URL%/JS.png" /> -->
+
+    <!-- Updated Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/img/terminal.png" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
